// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`article cards renders correctly Large 1`] = `
<div
  className="large"
>
  <div
    className="card"
  >
    <div
      className="flexContainerLarge"
    >
      <div
        className="largeImageContainer"
      >
        <div
          style={
            Object {
              "boxSizing": "border-box",
              "display": "block",
              "margin": 0,
              "overflow": "hidden",
              "position": "relative",
            }
          }
        >
          <div
            style={
              Object {
                "boxSizing": "border-box",
                "display": "block",
                "paddingTop": "50%",
              }
            }
          />
          <img
            alt="alt"
            className="largeImage __lazy"
            data-src="/_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=1200&q=75"
            data-srcset="/_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=320&q=75 320w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=420&q=75 420w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=768&q=75 768w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=1024&q=75 1024w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=1200&q=75 1200w"
            decoding="async"
            style={
              Object {
                "border": "none",
                "bottom": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": 0,
                "left": 0,
                "margin": "auto",
                "maxHeight": "100%",
                "maxWidth": "100%",
                "minHeight": "100%",
                "minWidth": "100%",
                "padding": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "visibility": "hidden",
                "width": 0,
              }
            }
          />
        </div>
        <div
          className="tagsLarge"
        >
          <div
            className="undefined tagSet"
          >
            <div
              className="tag"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              tag1
            </div>
          </div>
        </div>
      </div>
      <div
        className="details"
      >
        <h2
          className="heading"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          title
        </h2>
        <p
          className="blurb"
        >
          the blurb
        </p>
        <div
          className="readTime"
        >
          <sub>
            1
             min read
          </sub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`article cards renders correctly Medium 1`] = `
<div
  className="medium"
>
  <div
    className="card"
  >
    <div
      className="flexContainer"
    >
      <div
        className="imageContainer"
      >
        <div
          style={
            Object {
              "boxSizing": "border-box",
              "display": "block",
              "margin": 0,
              "overflow": "hidden",
              "position": "relative",
            }
          }
        >
          <div
            style={
              Object {
                "boxSizing": "border-box",
                "display": "block",
                "paddingTop": "50%",
              }
            }
          />
          <img
            alt="alt"
            className="image __lazy"
            data-src="/_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=1200&q=75"
            data-srcset="/_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=320&q=75 320w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=420&q=75 420w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=768&q=75 768w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=1024&q=75 1024w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=1200&q=75 1200w"
            decoding="async"
            style={
              Object {
                "border": "none",
                "bottom": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": 0,
                "left": 0,
                "margin": "auto",
                "maxHeight": "100%",
                "maxWidth": "100%",
                "minHeight": "100%",
                "minWidth": "100%",
                "padding": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "visibility": "hidden",
                "width": 0,
              }
            }
          />
        </div>
        <div
          className="tagsMedium"
        >
          <div
            className="undefined tagSet"
          >
            <div
              className="tag"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              tag1
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "padding": "10px",
          }
        }
      >
        <h2
          className="heading"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          title
        </h2>
        <p
          className="blurb"
        >
          the blurb
        </p>
        <div
          className="readTime"
        >
          <sub>
            1
             min read
          </sub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`article cards renders correctly Small 1`] = `
<div
  className="small"
>
  <div
    className="card"
  >
    <div
      className="flexContainer"
    >
      <div
        className="imageContainer"
      >
        <div
          style={
            Object {
              "boxSizing": "border-box",
              "display": "block",
              "margin": 0,
              "overflow": "hidden",
              "position": "relative",
            }
          }
        >
          <div
            style={
              Object {
                "boxSizing": "border-box",
                "display": "block",
                "paddingTop": "50%",
              }
            }
          />
          <img
            alt="alt"
            className="image __lazy"
            data-src="/_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=1200&q=75"
            data-srcset="/_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=320&q=75 320w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=420&q=75 420w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=768&q=75 768w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=1024&q=75 1024w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=1200&q=75 1200w"
            decoding="async"
            style={
              Object {
                "border": "none",
                "bottom": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": 0,
                "left": 0,
                "margin": "auto",
                "maxHeight": "100%",
                "maxWidth": "100%",
                "minHeight": "100%",
                "minWidth": "100%",
                "padding": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "visibility": "hidden",
                "width": 0,
              }
            }
          />
        </div>
        <div
          className="tagsSmall"
        >
          <div
            className="undefined tagSet"
          >
            <div
              className="tag"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              tag1
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "padding": "10px",
          }
        }
      >
        <h2
          className="heading"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          title
        </h2>
        <p
          className="blurb"
        >
          the blurb
        </p>
        <div
          className="readTime"
        >
          <sub>
            1
             min read
          </sub>
        </div>
      </div>
    </div>
  </div>
</div>
`;
